# kjudge-core

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: common.h  ktest.h  sysconf.h
src/jni/: jni_impl.cpp  ru_kjudge_core_SolutionLauncher.h  utils.cpp  utils.h
src/unix/: ktest_unix.cpp  unix_ops.cpp  unix_ops.h
